# dojo_apprentissage_supervise

./: CMakeLists.txt  loadtrainingmodel.cpp  loadtrainingmodel.h  loadtrainingmodel.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modelsavedialog.cpp  modelsavedialog.h  modelsavedialog.ui  paneldbdialog.cpp  paneldbdialog.h  paneldbdialog.ui  progressdialog.cpp  progressdialog.h  progressdialog.ui
